# advent-of-code-2024

./: .gitignore  Makefile  advent-of-code2024.cabal
app/: Main.hs
haskell/: Makefile  advent-of-code2024.cabal
haskell/lib/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Utils.hs
lib/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Utils.hs
python/: day_10.py  day_11.py  day_12.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  grid.py  run.py
src/: day_1.hs  day_2.hs
