cabal-version:      2.4
name:               advent-of-code2024
version:            0.1.0.0
build-type:         Simple

author:             Tom Lonergan
maintainer:         tomlonergan91@gmail.com

executable advent-of-code2024
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.16.4.0, advent-of-code2024
    default-language: Haskell2010

library
  hs-source-dirs: lib
  exposed-modules: Utils, Day1, Day2, Day3, Day4, Day5
  build-depends: base ^>=4.16.4.0, regex-pcre ^>=0.95, unordered-containers ^>= 0.2.20, split ^>= 0.2.5
  default-language: Haskell2010
